// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ListItemSubtitleContent > renders correctly 1`] = `
<div
  class="max-width-100 d-flex overflow-hidden text-overflow-ellipsis white-space-nowrap"
>
  <!--v-if-->
  <span
    class="text-label-small text-tertiary-text white-space-nowrap"
  >
    Title
  </span>
  <span
    class="text-body-small ml-1 flex-grow-0 overflow-hidden text-overflow-ellipsis"
  >
    
    
    <text-with-url-stub
      tag="span"
      text="primaryVal"
    />
    <!--v-if-->
    
    
  </span>
  <span
    class="text-body-small ml-1"
  >
     (secondaryVal) 
  </span>
  <span
    class="text-body-small ml-1"
  >
    tertiaryVal
  </span>
</div>
`;

exports[`ListItemSubtitleContent > renders correctly when primaryValue is array 1`] = `
<div
  class="max-width-100 d-flex overflow-hidden text-overflow-ellipsis white-space-nowrap"
>
  <!--v-if-->
  <span
    class="text-label-small text-tertiary-text white-space-nowrap"
  >
    Title
  </span>
  <span
    class="text-body-small ml-1 flex-grow-0 overflow-hidden text-overflow-ellipsis"
  >
    
    
    <text-with-url-stub
      tag="span"
      text="Descr"
    />
    <v-divider-stub
      class="d-inline mx-1"
      gradient="false"
      inset="false"
      thickness="2"
      variant="solid"
      vertical="true"
    />
    
    
    <text-with-url-stub
      tag="span"
      text="value1"
    />
    <v-divider-stub
      class="d-inline mx-1"
      gradient="false"
      inset="false"
      thickness="2"
      variant="solid"
      vertical="true"
    />
    
    
    <text-with-url-stub
      tag="span"
      text="value2.1, value2.2"
    />
    <!--v-if-->
    
    
  </span>
  <span
    class="text-body-small ml-1"
  >
     (secondaryVal) 
  </span>
  <span
    class="text-body-small ml-1"
  >
    tertiaryVal
  </span>
</div>
`;

exports[`ListItemSubtitleContent > renders correctly with multiple lines 1`] = `
<div
  class="max-width-100"
>
  <!--v-if-->
  <span
    class="text-label-small text-tertiary-text white-space-nowrap"
  >
    Title
  </span>
  <span
    class="text-body-small ml-1"
  >
    
    
    <text-with-url-stub
      tag="span"
      text="primaryVal"
    />
    <!--v-if-->
    
    
  </span>
  <!--v-if-->
  <span
    class="text-body-small ml-1"
  >
    tertiaryVal
  </span>
</div>
`;
